fixed centering on mobile app

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -2,7 +2,7 @@ ion-content{
   --ion-background-color:#8f0606;
 }
 
-.content{
+.content .row-center{
   margin-left: center;
   margin-right: center;
   width: 80%;
